# FitnessPal

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  main.py  worker.py
api/app/core/: __init__.py  audit.py  config.py  config_crypto.py  database.py  food_imports.py  idempotency.py  jobs.py  local_ai.py  logic.py  migrations.py  models.py  modules.py  ownership.py  pagination.py  schemas.py  security.py  serialization.py  storage.py
api/app/modules/: __init__.py  ai.py  calendar.py  insights.py  metrics.py  nutrition.py  platform.py  training.py
api/migrations/: env.py
api/migrations/versions/: 4d3b8a7f9c12_multi_user_ownership.py  850c045c6a5e_initial_schema.py  b91b4a9b0c4e_ai_profiles_and_coach_briefs.py  c6f6a1c2e8d4_user_preferences.py  d2a4f1b8c9e7_coach_feed_and_timezone.py
api/scripts/: export_openapi.py
api/tests/: test_ai_configuration.py  test_calendar.py  test_coach_feed.py  test_jobs.py  test_local_ai.py  test_logic.py  test_migrations.py  test_multi_user_accounts.py  test_pagination_and_routines.py  test_transaction_boundaries.py  test_updates_and_scopes.py
infra/nginx/: fitnesspal.conf
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/public/: manifest.webmanifest  (+1 more)
worker/: README.md
(+35 files in other folders)
